# CelyaVox-Flutter

./: .gitignore  .make_call.php.swp  BUILD_DEPLOY_GUIDE.md  CONFIG_TUNABLE.md  DEPLOYMENT_SUMMARY.md  FIREBASE_SIP_FIXES.md  GITHUB_ACTIONS_FIX_SUMMARY.md  GITHUB_ACTIONS_PJSIP.md  INDEX.md  README_FIXES.md  START_HERE.md  TESTING_GUIDE.md  celyavox_wake_app.php  make_call.php  pubspec.yaml  wake_app.php
.github/: CI_SECRETS.md
.github/workflows/: android-keystore-check.yml  android.yml  ios.yml
android/: build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  voip_engine.cpp
android/app/src/main/java/com/celya/voip/provisioning/: ProvisioningManager.kt  ProvisioningXmlParser.kt
android/app/src/main/java/com/celya/voip/security/: SecureStorage.kt
android/app/src/main/java/com/celya/voip/sip/: SipAccountManager.kt
android/app/src/main/java/com/celya/voip/telecom/: IncomingCallService.kt  TelecomConnectionService.kt
android/app/src/main/jniLibs/: README.md
android/app/src/main/kotlin/com/example/voip/: CallActivity.kt  MainActivity.kt  PjsipEngine.kt  SipAccount.kt  SipAccountManager.kt  VoipConnection.kt  VoipConnectionService.kt  VoipEngine.kt  VoipFirebaseService.kt  VoipForegroundService.kt  VoipMethodChannel.kt  WakeLockManager.kt
android/app/src/main/kotlin/fr/celya/celyavox/: CallActivity.kt  FcmTokenStore.kt  FullScreenIntentSettingsActivity.kt  MainActivity.kt  PjsipEngine.kt  ProvisioningMethodChannel.kt  RoleRequestActivity.kt  SipAccount.kt  SipAccountManager.kt  VoipConnection.kt  VoipConnectionService.kt  VoipEngine.kt  VoipFirebaseService.kt  VoipForegroundService.kt  VoipMethodChannel.kt  WakeLockManager.kt
android/app/src/main/res/layout/: activity_full_screen_intent_gate.xml
android/app/src/main/res/values/: styles.xml
android/pjsip/: build_pjsip.sh  config_site.h
ios/: Podfile
ios/Runner/: AppDelegate+VoIP.swift
ios/Runner/Provisioning/: ProvisioningManager.swift  ProvisioningXmlParser.swift
ios/Runner/SIP/: SipAccountManager.swift
ios/Runner/Security/: SecureStorage.swift
lib/: main.dart
lib/api/: celyavox_api.dart
lib/contacts/: saved_contacts_store.dart
lib/log/: app_logger.dart
lib/provisioning/: provisioning_channel.dart  provisioning_page.dart  provisioning_state.dart
lib/theme/: theme_controller.dart
lib/ui/: dialpad_page.dart  in_call_page.dart  incoming_call_page.dart  settings_page.dart
lib/voip/: fcm_token_manager.dart  fcm_token_sync.dart  sip_config.dart  sip_config_state.dart  voip_engine.dart  voip_events.dart
